--- a/skills.html
+++ b/skills.html
@@ -49,6 +49,11 @@
                     </label>
                   </div>
                 </ul>
+                <div class="hamburger">
+                  <span class="bar"></span>
+                  <span class="bar"></span>
+                  <span class="bar"></span>
+                </div>
               </div>
             </nav>
 
@@ -111,14 +116,19 @@
           <ul class="softList">
             <li class = "skillsListItem button buttonDesign">Adaptive</li>
             <li class = "skillsListItem button buttonDesign">Curiosity</li>
-            <li class = "skillsListItem button buttonDesign">Attentive to detail</li>
+            <li class = "skillsListItem button buttonDesign">Attentive To Detail</li>
             <li class = "skillsListItem button buttonDesign">Innovative</li>
             <li class = "skillsListItem button buttonDesign">Collaborative</li>
+            <li class = "skillsListItem button buttonDesign">Creativity</li>
             <li class = "skillsListItem button buttonDesign">Time Management</li>
             <li class = "skillsListItem button buttonDesign">Complex Problem Solver</li>
             <li class = "skillsListItem button buttonDesign">Empathetic</li>
             <li class = "skillsListItem button buttonDesign">Communicative</li>
             <li class = "skillsListItem button buttonDesign">Articulate</li>
+            <li class = "skillsListItem button buttonDesign">Story Telling</li>
+            <li class = "skillsListItem button buttonDesign">Agile Methodlogies</li>
+            <li class = "skillsListItem button buttonDesign">Multitask</li>
+            <li class = "skillsListItem button buttonDesign">Public Speaking</li>
           </ul>
         </div>
         <footer id="footer">
