Updated experience and skills

--- a/experience.html
+++ b/experience.html
@@ -58,15 +58,58 @@
               </div>
             </nav>
 
-            <section>
+            <section class="header-container">
                 <div class="content-text">
                   <h2>Professional Experience</h2>
                   <p>A timeline of my professional work experience as a digital designer.</p>
                 </div>
             </section>
         </header>
-        <br>
-        
+        <!--Experience 1-->
+        <section class="bigContainer">
+            <div class="experience1">
+                <h2>Beacon Consulting Engineers</h2>
+                <h3>Website Redesign and Management</h3>
+                <p>With Beacon Consulting Engineers, I was given the chance to redesign and update the company's professional website. I used my knowledge of color theory to apply a suitable color scheme to enhance its image.
+                  I created new sub-directories to allow for easier navigation. Additionally, I reformatted the portfolio into specific categories for designated projects. I used the company's database to retrieve images and update the current list of projects. 
+                  Furthermore, I connected the website to professional social media accounts while also redesigning the contact page to allow for easier connections with future clients. 
+                  Lastly, I focused on responsive design to optimize users' abilities on mobile devices. View the complete site using the link.
+                </p>
+                <br>
+                <a href="https://www.beacon-eng.com/home.html">Beacon Consulting Engineers Website</a>
+            </div>
+        </section>
+
+        <!--Experience 2-->
+        <section class="bigContainer">
+            <div class="experience2">
+                <h2>All Occassions LLC</h2>
+                <h3>Website Management</h3>
+                <p>TFor All Occassions LLC, I focused on enhancing the current site while also improving the user experience. My research and analysis of the site's 
+                  accessibility led to the discovery of a lack of alt text and other features that hinder the site from being reached by search crawlers.
+                  Thus, I reconstructed the information architecture to enhance usability and implemented SEO techniques to increase both organic 
+                  website traffic and search rankings. Overall, my work greatly enhanced the brand's online presence and image. With a redesigned 
+                  website, customers will enjoy shopping for products and this website can actually reach potential customers.
+                </p>
+                <br>
+                <a href="https://www.shopalloccasions.com/">All Occassions Website</a>
+            </div>
+        </section>
+
+        <!--Experience 3-->
+        <section class="bigContainer">
+            <div class="experience3">
+                <h2>The Moon Lady Company</h2>
+                <h3>Art Installation</h3>
+                <p>Working in a group of 5, we were tasked with creating an installation to present in part of the UCF Celebrates the Arts "Visual Tales" 
+                  exhibition. Hand-built from the ground up, we created 2D vectors using tools such as Adobe Illustrator to then laser cut and hand paint 
+                  individual wood pieces. As my first collaboration project, I gained effective communication skills and used constructive feedback from team 
+                  members to improve throughout the process. Delegating tasks and ensuring we met our deadlines were crucial to creating a successful piece.
+                  Most importantly, working in a team helped me build my relationships and become adaptable to solving challenges that arose. </p>
+                <br>
+                <a href="https://100be5dc-96d6-4016-aa10-edd2a3294020.filesusr.com/ugd/d995a8_65ca8a73c8eb4718971f392b3bb6eead.pdf">The Lady of the Moon Proposal</a>
+            </div>
+        </section>
 
         <footer id="footer">
           <div class="container">
