--- a/portfolio.html
+++ b/portfolio.html
@@ -76,6 +76,8 @@
                   deployed our site. My roles on this team included designing the information architecture, creating the function hiFi protoype, and helping to code both the front and backend.
                   View the complete site using the link.
                 </p>
+                <br>
+                <a href="https://students.gaim.ucf.edu/~jo090771/index.html">Bump Bites Website</a>
             </div>
             <div class="image-column">
                 <img src="assets/project/bumpCart.png" alt="Bump Bites Project Card">
@@ -108,6 +110,8 @@
                   how personalized your conersation becomes, and rates how obscure your conversations are compared to other users. Additonally, I redesigned the functionality of the home page to 
                   include folders and filters to sort previous conversations. Use the link to preview the hifi prototype.
                 </p>
+                <br>
+                <a href="https://www.figma.com/proto/hzuW64iq3t8ZDLSERkw3Qv/AI-Product-Design-Interview-Project?node-id=13-1047&starting-point-node-id=13%3A1047&t=5nD2hYN2zwXRiBSD-1">Chat GPT User Metrics Prototype</a>
             </div>
             <div class="image-column">
                 <img src="assets/project/ChatGPTCard.png" alt="Chat GPT User Metrics Card">
@@ -123,6 +127,8 @@
                   was previously designed on WordPress, I optimized the layout and infromation architecture of the site. Additionally, I implemented plugins to give more functionality and animation to the page. The website has a simple interface 
                   with navigation to upcoming shows, music videos, and the latest released music. Additionally, the site showcases the band members, allows users to purchase merchandise, includes forms to contact the band, and a button to subscribe to their newsletter. 
                   This website design directly reflects the band's personality and music style, which can be seen in the bold color choices against a dark background. Use the link to preview the prototype.</p>
+                  <br>
+                <a href="https://www.figma.com/proto/tD2truJ99lUfqEXUTHYJt2/Little-Us-Website-Design?node-id=11-195&starting-point-node-id=11%3A195&scaling=contain&t=2XMDlFTzRs4QtQ9B-1">Little Us Prototype</a>
             </div>
             <div class="image-column">
                 <img src="assets/project/littleUsCard.png" alt="Little Us Card">
@@ -138,6 +144,8 @@
                   can favorite cards, shuffle the deck, and quickly edit the card. Additionally, I designed a simple system to sort and mark cards as part of a certain class deck. Use the link to
                   preview my prototype.
                 </p>
+                <br>
+                <a href="https://www.figma.com/proto/I9BwZHQNDzH6lCPEenA7oR/Flash-Card-App?node-id=25-3&t=E6rREuL4NA45haf8-1&scaling=scale-down&page-id=25%3A2&starting-point-node-id=25%3A3">Flash Study Prototype</a>
             </div>
             <div class="image-column">
                 <img src="assets/project/flashStudyCard.png" alt="Flash Study Card">
@@ -153,6 +161,8 @@
                   I created wireframes and low-fidelity mobile portotypes. Likewise, using Figma I created a functional high-fidelity prototype to simulate realistic interactions. Lastly I designed 
                   a comprehensive library of vetor components to implement in the interface. Use the link to preview the prototype.
                 </p>
+                <br>
+                <a href="https://www.figma.com/proto/yuwIx7x0DNiuh7xL3I02ql/SPARK?node-id=44-468&t=aZucD5MkQ7AmrKJy-1&scaling=scale-down&page-id=44%3A384&starting-point-node-id=44%3A468">SPARK Prototype</a>
             </div>
             <div class="image-column">
                 <img src="assets/project/sparkCard.png" alt="SPARK Card">
@@ -167,6 +177,8 @@
                 <p>Using Procreate, I redesigned the iconic Dilemma Band Logo. This rock party fusion band located in Avon, CT plays across the Northeast at festivals, bars, and private events.
                   The design is currently being used as the bands main logo and is being sold in new merchendise!
                 </p>
+                <br>
+
             </div>
             <div class="image-column">
                 <img src="assets/project/corey.jpg" alt="Corey Rieman and The Dilemma Band Logo">
