--- a/experience.html
+++ b/experience.html
@@ -61,7 +61,7 @@
             <section class="header-container">
                 <div class="content-text">
                   <h2>Professional Experience</h2>
-                  <p>A timeline of my professional work experience as a digital designer.</p>
+                  <p>My professional work experience as a designer.</p>
                 </div>
             </section>
         </header>
@@ -73,7 +73,7 @@
                 <p>With Beacon Consulting Engineers, I was given the chance to redesign and update the company's professional website. I used my knowledge of color theory to apply a suitable color scheme to enhance its image.
                   I created new sub-directories to allow for easier navigation. Additionally, I reformatted the portfolio into specific categories for designated projects. I used the company's database to retrieve images and update the current list of projects. 
                   Furthermore, I connected the website to professional social media accounts while also redesigning the contact page to allow for easier connections with future clients. 
-                  Lastly, I focused on responsive design to optimize users' abilities on mobile devices. View the complete site using the link.
+                  Lastly, I focused on responsive design to optimize users' abilities on mobile devices. View the complete site using the link below.
                 </p>
                 <br>
                 <a href="https://www.beacon-eng.com/home.html">Beacon Consulting Engineers Website</a>
@@ -89,7 +89,7 @@
                   accessibility led to the discovery of a lack of alt text and other features that hinder the site from being reached by search crawlers.
                   Thus, I reconstructed the information architecture to enhance usability and implemented SEO techniques to increase both organic 
                   website traffic and search rankings. Overall, my work greatly enhanced the brand's online presence and image. With a redesigned 
-                  website, customers will enjoy shopping for products and this website can actually reach potential customers.
+                  website, customers will enjoy shopping for products and this website can actually reach potential customers. View the site using the link below.
                 </p>
                 <br>
                 <a href="https://www.shopalloccasions.com/">All Occassions Website</a>
@@ -105,12 +105,12 @@
                   exhibition. Hand-built from the ground up, we created 2D vectors using tools such as Adobe Illustrator to then laser cut and hand paint 
                   individual wood pieces. As my first collaboration project, I gained effective communication skills and used constructive feedback from team 
                   members to improve throughout the process. Delegating tasks and ensuring we met our deadlines were crucial to creating a successful piece.
-                  Most importantly, working in a team helped me build my relationships and become adaptable to solving challenges that arose. </p>
+                  Most importantly, working in a team helped me build my relationships and become adaptable to solving challenges that arose. Use the link below to read the full proposal.</p>
                 <br>
                 <a href="https://100be5dc-96d6-4016-aa10-edd2a3294020.filesusr.com/ugd/d995a8_65ca8a73c8eb4718971f392b3bb6eead.pdf">The Lady of the Moon Proposal</a>
             </div>
         </section>
-
+        <br>
         <footer id="footer">
           <div class="container">
             <a href="mailto:carolinemval@gmail.com">carolinemval@gmail.com</a>
