--- a/portfolio.html
+++ b/portfolio.html
@@ -74,7 +74,7 @@
                 <p>Over the course of 2 semesters, my senior design capstone team and I created Bump Bites, a website for a pregnancy snack craving subscription box. The production of this project includes a
                   Statement of Work, Strategy Guide, Style Sheet, Wireframes, Lofi and HiFi prototypes, Use Cases, Content Inventory, Testing Plan, and Tetsing Mitigation. My team and I successfuly developed and
                   deployed our site. My roles on this team included designing the information architecture, creating the function hiFi protoype, and helping to code both the front and backend.
-                  View the complete site using the link.
+                  View the complete site using the link below.
                 </p>
                 <br>
                 <a href="https://students.gaim.ucf.edu/~jo090771/index.html">Bump Bites Website</a>
@@ -92,7 +92,7 @@
                 <p>This exercise app features a home screen that leads to a exercise menu selection. With a variety of exercises
                     users can monitor their workout exercises. This app includes a stopwatch feature and rep counter, making it a perfect fitness companion.
                     With a simple and intuitve interface, users are encouraged to exercise and record their fitness journey. Thorugh the
-                    use of React Native framework is a simple and efficient application. View the GIF to preview its functionality.
+                    use of React Native framework is a simple and efficient application. View the GIF on the right to preview its functionality.
                 </p>
             </div>
             <div class="image-column">
@@ -108,7 +108,7 @@
                 <p>I developed 6 different user metrics to track user data while using Chat GPT. This high-fidelity protype was designed in part of a 24-hour assessment. The user metrics
                   are unique and provide the user interesting insight on how they use the chatbot compared to other users. The user metrics include calculating the comlexity of the questions asked,
                   how personalized your conersation becomes, and rates how obscure your conversations are compared to other users. Additonally, I redesigned the functionality of the home page to 
-                  include folders and filters to sort previous conversations. Use the link to preview the hifi prototype.
+                  include folders and filters to sort previous conversations. Use the link below to preview the hifi prototype.
                 </p>
                 <br>
                 <a href="https://www.figma.com/proto/hzuW64iq3t8ZDLSERkw3Qv/AI-Product-Design-Interview-Project?node-id=13-1047&starting-point-node-id=13%3A1047&t=5nD2hYN2zwXRiBSD-1">Chat GPT User Metrics Prototype</a>
@@ -126,7 +126,7 @@
                 <p>This high-fidelity website is designed specifically for the up and coming rock band Little Us. Little Us website information had not been updated since 2019, runs incredibly slow, and has an outdated theme. Since their website
                   was previously designed on WordPress, I optimized the layout and infromation architecture of the site. Additionally, I implemented plugins to give more functionality and animation to the page. The website has a simple interface 
                   with navigation to upcoming shows, music videos, and the latest released music. Additionally, the site showcases the band members, allows users to purchase merchandise, includes forms to contact the band, and a button to subscribe to their newsletter. 
-                  This website design directly reflects the band's personality and music style, which can be seen in the bold color choices against a dark background. Use the link to preview the prototype.</p>
+                  This website design directly reflects the band's personality and music style, which can be seen in the bold color choices against a dark background. Use the link below to preview the prototype.</p>
                   <br>
                 <a href="https://www.figma.com/proto/tD2truJ99lUfqEXUTHYJt2/Little-Us-Website-Design?node-id=11-195&starting-point-node-id=11%3A195&scaling=contain&t=2XMDlFTzRs4QtQ9B-1">Little Us Prototype</a>
             </div>
@@ -141,7 +141,7 @@
                 <h2>Flash Study</h2>
                 <h3>UI/UX Design</h3>
                 <p>I created a mid-fidelity mobile application to allow users to study flashcards. The app allows users to create, delete and study their flashcard decks. While in study mode users
-                  can favorite cards, shuffle the deck, and quickly edit the card. Additionally, I designed a simple system to sort and mark cards as part of a certain class deck. Use the link to
+                  can favorite cards, shuffle the deck, and quickly edit the card. Additionally, I designed a simple system to sort and mark cards as part of a certain class deck. Use the link below to
                   preview my prototype.
                 </p>
                 <br>
@@ -159,7 +159,7 @@
                 <h3>UI/UX Design</h3>
                 <p>I designed a photo-sharing and geosocial networking app to connect people and their pets. SPARK aims to help both people and pets go out and create new, meaningful relationships.
                   I created wireframes and low-fidelity mobile portotypes. Likewise, using Figma I created a functional high-fidelity prototype to simulate realistic interactions. Lastly I designed 
-                  a comprehensive library of vetor components to implement in the interface. Use the link to preview the prototype.
+                  a comprehensive library of vetor components to implement in the interface. Use the link below to preview the prototype.
                 </p>
                 <br>
                 <a href="https://www.figma.com/proto/yuwIx7x0DNiuh7xL3I02ql/SPARK?node-id=44-468&t=aZucD5MkQ7AmrKJy-1&scaling=scale-down&page-id=44%3A384&starting-point-node-id=44%3A468">SPARK Prototype</a>
