--- a/experience.html
+++ b/experience.html
@@ -70,6 +70,7 @@
             <div class="experience1">
                 <h2>Beacon Consulting Engineers</h2>
                 <h3>Website Redesign and Management</h3>
+                <br>
                 <p>With Beacon Consulting Engineers, I was given the chance to redesign and update the company's professional website. I used my knowledge of color theory to apply a suitable color scheme to enhance its image.
                   I created new sub-directories to allow for easier navigation. Additionally, I reformatted the portfolio into specific categories for designated projects. I used the company's database to retrieve images and update the current list of projects. 
                   Furthermore, I connected the website to professional social media accounts while also redesigning the contact page to allow for easier connections with future clients. 
@@ -85,7 +86,8 @@
             <div class="experience2">
                 <h2>All Occassions LLC</h2>
                 <h3>Website Management</h3>
-                <p>TFor All Occassions LLC, I focused on enhancing the current site while also improving the user experience. My research and analysis of the site's 
+                <br>
+                <p>For All Occassions LLC, I focused on enhancing the current site while also improving the user experience. My research and analysis of the site's 
                   accessibility led to the discovery of a lack of alt text and other features that hinder the site from being reached by search crawlers.
                   Thus, I reconstructed the information architecture to enhance usability and implemented SEO techniques to increase both organic 
                   website traffic and search rankings. Overall, my work greatly enhanced the brand's online presence and image. With a redesigned 
@@ -101,6 +103,7 @@
             <div class="experience3">
                 <h2>The Moon Lady Company</h2>
                 <h3>Art Installation</h3>
+                <br>
                 <p>Working in a group of 5, we were tasked with creating an installation to present in part of the UCF Celebrates the Arts "Visual Tales" 
                   exhibition. Hand-built from the ground up, we created 2D vectors using tools such as Adobe Illustrator to then laser cut and hand paint 
                   individual wood pieces. As my first collaboration project, I gained effective communication skills and used constructive feedback from team 
