--- a/experience.html
+++ b/experience.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <!-- Primary Meta Tags -->
         <title>Caroline Valenzuela Portfolio</title>
-        <meta name="title" content="Caroline Valenzuela Portfolio" />
+        <meta name="title" content="Caroline Valenzuela Experience" />
         <meta
         name="description"
         content="Caroline Valenzuela Experience Page"
