--- a/skills.html
+++ b/skills.html
@@ -6,10 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <!-- Primary Meta Tags -->
         <title>Caroline Valenzuela Portfolio</title>
-        <meta name="title" content="Caroline Valenzuela Portfolio" />
+        <meta name="title" content="Caroline Valenzuela Skills" />
         <meta
         name="description"
-        content="Caroline Valenzuela Experience Page"
+        content="Caroline Valenzuela Skills Page"
         />
         <!--Links-->
         <link rel="stylesheet" href="css/style.css" />
