--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <li>
               <a
                 class="nav-link btn btn-primary"
-                href="https://drive.google.com/file/d/1bjWCtlshbLaT3-j-Xpwc5gfocpynedTP/view?usp=sharingl"
+                href="https://drive.google.com/file/d/1QNeleNOcZSoeGMgJTLqmTJUIZ9BAUZR0/view?usp=sharing"
                 >RESUME <i class="fas fa-arrow-right"></i
               ></a>
             </li>
